[package]
name = "alpha-13"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "1.3" }
http-body-util = { version = "0.1" }
hyper = { version = "1.1" }
hyper-util = { version = "0.1", features = ["full"] }
k256 = { version = "0.13" }
serde_json = { version = "1.0" }
tokio = { version = "1.38", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
url = "2.5"

# TLSNotary packages
tlsn = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.13" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", rev = "v0.1.0-alpha.13" }
