[package]
name = "alpha-6"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = { version = "0.1" }
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

# TLSNotary packages
notary-client = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6" }
